samples/_failures_safe/1761634391_0fbace_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ff1bdae.c: In function ‘main’:
./samples/SAFE/__tmp_5ff1bdae.c:137:12: error: missing terminating " character
  137 |     printf("Compression and decompression successful
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5ff1bdae.c:137:5: error: expected expression at end of input
  137 |     printf("Compression and decompression successful
      |     ^~~~~~
./samples/SAFE/__tmp_5ff1bdae.c:137:5: error: expected declaration or statement at end of input
